--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
         
         
         <!-- JAVASCRIPTS -->
-        <script type="text/javascript" src="assets/js/plugins.js"></script>
-        <script type="text/javascript" src="assets/js/main.js"></script>
+        <script type="text/javascript" src="plugins.js"></script>
+        <script type="text/javascript" src="main.js"></script>
    
    
     </body> 
